simulatron-silk/src/lib/snapshots/simulatron_silk__tests__combine_internal.snap
---
source: src/lib/tests.rs
expression: parsed

---
---Symbols---
foo I 0x00000006 
  0x00000002
  0x0000000C
foo0 I 0x00000018 
  0x00000014
  0x0000001D
---Sections---
Section 0 flags: 00010001 start: 0x00000000 length: 0x00000010
0x00000000    FF FF 00 00  00 00 FF FF  FF FF FF FF  00 00 00 00  |................|
Section 1 flags: 00000100 start: 0x00000010 length: 0x0000000C
0x00000010    FF FF FF FF  00 00 00 00  FF FF FF FF               |............|
Section 2 flags: 00010001 start: 0x0000001C length: 0x00000008
0x0000001C    11 00 00 00  00 11 11 11                            |........|

