simulatron-silk/src/lib/snapshots/simulatron_silk__tests__multi_section.snap
---
source: src/tests.rs
expression: parsed

---
---Symbols---
foo I 0x00000008 
  0x00000004
  0x0000000D
---Sections---
Section 0 flags: 00000100 start: 0x00000000 length: 0x0000000C
0x00000000    FF FF FF FF  00 00 00 00  FF FF FF FF
Section 1 flags: 00010001 start: 0x0000000C length: 0x00000008
0x0000000C    11 00 00 00  00 11 11 11

