simulatron-silk/src/lib/snapshots/simulatron_silk__tests__multi_section_link.snap
---
source: src/lib/tests.rs
expression: pretty_print_hex_block_zero(&rom)

---
0x00000000    11 00 00 00  10 11 11 11  FF FF FF FF  00 00 00 10  |................|
0x00000010    FF FF FF FF  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000020    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000030    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000040    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000050    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000060    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000070    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000080    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000090    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000000A0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000000B0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000000C0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000000D0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000000E0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000000F0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000100    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000110    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000120    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000130    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000140    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000150    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000160    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000170    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000180    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x00000190    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000001A0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000001B0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000001C0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000001D0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000001E0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
0x000001F0    00 00 00 00  00 00 00 00  00 00 00 00  00 00 00 00  |................|
