simulatron-silk/src/lib/snapshots/simulatron_silk__tests__single_symbol.snap
---
source: src/lib/tests.rs
expression: parsed

---
---Symbols---
foo I 0x00000006 
  0x00000002
  0x0000000C
---Sections---
Section 0 flags: 00010001 start: 0x00000000 length: 0x00000010
0x00000000    FF FF 00 00  00 00 FF FF  FF FF FF FF  00 00 00 00  |................|

